--- a/assets/css/style_index.css
+++ b/assets/css/style_index.css
@@ -79,7 +79,7 @@ nav .nav-social {
 }
 
 .side-nav {
-    background-color: #000;
+    background-color:white;
     width: 250px;
     z-index: 99999;
     padding: 0 30px;
